[04/29/24]반려동물 등록 현황 전처리 내용 변경 사항 있음

--- a/전처리 과정/반려동물등록현황/동대문구_반려동물등록현황.ipynb
+++ b/전처리 과정/반려동물등록현황/동대문구_반려동물등록현황.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,11 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = \"C:/Users/82108/Desktop/jw/프로젝트/반려동물등록현황전처리전/서울특별시동대문구반려동물등록현황20201014.csv\"\n",
+    "file_path = \"C:/Users/82108/Desktop/jw/프로젝트/반려동물등록현황전처리전/서울_반려동물_등록현황/서울특별시_동대문구_반려동물등록현황_20201014.csv\"\n",
     "df_raw = pd.read_csv(file_path, encoding='euc-kr')\n",
     "# 파일불러오기 \n",
     "# 인코딩 문제 발생, 현재 파일이 EUC-KR로 인코딩되어 있으므로 encoding='euc-kr'으로 지정"
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "4         130.0   67.0  1559.0         1.26  1960.0  2020-10-14  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -204,86 +204,249 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Location</th>\n",
-       "      <th>Pet_Owners</th>\n",
-       "      <th>Registrations_per_Pet_Owner</th>\n",
-       "      <th>Total_Registrations</th>\n",
+       "      <th>읍면동(법정동)</th>\n",
+       "      <th>등록주체_시군구</th>\n",
+       "      <th>등록주체_대행업체</th>\n",
+       "      <th>등록주체_기타(이벤트 등)</th>\n",
+       "      <th>등록형태_내장형RFID</th>\n",
+       "      <th>등록형태_외장형RFID</th>\n",
+       "      <th>등록형태_인식표RFID</th>\n",
+       "      <th>등록품종수</th>\n",
+       "      <th>동물소유자수</th>\n",
+       "      <th>동물소유자당동물등록수</th>\n",
+       "      <th>총등록수</th>\n",
+       "      <th>데이터기준일자</th>\n",
+       "      <th>구</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>신설동</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>188.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>32.0</td>\n",
        "      <td>147.0</td>\n",
        "      <td>1.32</td>\n",
        "      <td>194.0</td>\n",
+       "      <td>2020-10-14</td>\n",
+       "      <td>동대문구</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>용두동</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>1275.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>508.0</td>\n",
+       "      <td>721.0</td>\n",
+       "      <td>118.0</td>\n",
+       "      <td>64.0</td>\n",
        "      <td>1025.0</td>\n",
        "      <td>1.31</td>\n",
        "      <td>1347.0</td>\n",
+       "      <td>2020-10-14</td>\n",
+       "      <td>동대문구</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>이문동</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>2320.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1034.0</td>\n",
+       "      <td>1196.0</td>\n",
+       "      <td>143.0</td>\n",
+       "      <td>67.0</td>\n",
        "      <td>1344.0</td>\n",
        "      <td>1.77</td>\n",
        "      <td>2373.0</td>\n",
+       "      <td>2020-10-14</td>\n",
+       "      <td>동대문구</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>장안동</td>\n",
+       "      <td>133.0</td>\n",
+       "      <td>3450.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1508.0</td>\n",
+       "      <td>1871.0</td>\n",
+       "      <td>205.0</td>\n",
+       "      <td>78.0</td>\n",
        "      <td>2745.0</td>\n",
        "      <td>1.31</td>\n",
        "      <td>3584.0</td>\n",
+       "      <td>2020-10-14</td>\n",
+       "      <td>동대문구</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>전농동</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>1882.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1030.0</td>\n",
+       "      <td>800.0</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>67.0</td>\n",
        "      <td>1559.0</td>\n",
        "      <td>1.26</td>\n",
+       "      <td>1960.0</td>\n",
+       "      <td>2020-10-14</td>\n",
+       "      <td>동대문구</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  읍면동(법정동)  등록주체_시군구  등록주체_대행업체  등록주체_기타(이벤트 등)  등록형태_내장형RFID  등록형태_외장형RFID  \\\n",
+       "0      신설동       6.0      188.0             0.0          70.0         103.0   \n",
+       "1      용두동      70.0     1275.0             2.0         508.0         721.0   \n",
+       "2      이문동      52.0     2320.0             1.0        1034.0        1196.0   \n",
+       "3      장안동     133.0     3450.0             1.0        1508.0        1871.0   \n",
+       "4      전농동      76.0     1882.0             2.0        1030.0         800.0   \n",
+       "\n",
+       "   등록형태_인식표RFID  등록품종수  동물소유자수  동물소유자당동물등록수    총등록수     데이터기준일자     구  \n",
+       "0          21.0   32.0   147.0         1.32   194.0  2020-10-14  동대문구  \n",
+       "1         118.0   64.0  1025.0         1.31  1347.0  2020-10-14  동대문구  \n",
+       "2         143.0   67.0  1344.0         1.77  2373.0  2020-10-14  동대문구  \n",
+       "3         205.0   78.0  2745.0         1.31  3584.0  2020-10-14  동대문구  \n",
+       "4         130.0   67.0  1559.0         1.26  1960.0  2020-10-14  동대문구  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dongdaemun['구']=\"동대문구\"\n",
+    "dongdaemun.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\82108\\AppData\\Local\\Temp\\ipykernel_26784\\551363796.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dongdaemun.rename(columns={'구':'Gu',\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gu</th>\n",
+       "      <th>Dong</th>\n",
+       "      <th>Pet_Owners</th>\n",
+       "      <th>Total_Registrations</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>동대문구</td>\n",
+       "      <td>신설동</td>\n",
+       "      <td>147.0</td>\n",
+       "      <td>194.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>동대문구</td>\n",
+       "      <td>용두동</td>\n",
+       "      <td>1025.0</td>\n",
+       "      <td>1347.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>동대문구</td>\n",
+       "      <td>이문동</td>\n",
+       "      <td>1344.0</td>\n",
+       "      <td>2373.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>동대문구</td>\n",
+       "      <td>장안동</td>\n",
+       "      <td>2745.0</td>\n",
+       "      <td>3584.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>동대문구</td>\n",
+       "      <td>전농동</td>\n",
+       "      <td>1559.0</td>\n",
        "      <td>1960.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>동대문구</td>\n",
        "      <td>제기동</td>\n",
        "      <td>901.0</td>\n",
-       "      <td>1.33</td>\n",
        "      <td>1194.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>동대문구</td>\n",
        "      <td>회기동</td>\n",
        "      <td>285.0</td>\n",
-       "      <td>1.18</td>\n",
        "      <td>335.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
+       "      <td>동대문구</td>\n",
        "      <td>휘경동</td>\n",
        "      <td>1130.0</td>\n",
-       "      <td>1.25</td>\n",
        "      <td>1413.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
+       "      <td>동대문구</td>\n",
        "      <td>답십리동</td>\n",
        "      <td>1873.0</td>\n",
-       "      <td>1.36</td>\n",
        "      <td>2538.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
+       "      <td>동대문구</td>\n",
        "      <td>청량리동</td>\n",
        "      <td>659.0</td>\n",
-       "      <td>1.32</td>\n",
        "      <td>873.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>동대문구</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -293,33 +456,33 @@
        "</div>"
       ],
       "text/plain": [
-       "   Location  Pet_Owners  Registrations_per_Pet_Owner  Total_Registrations\n",
-       "0       신설동       147.0                         1.32                194.0\n",
-       "1       용두동      1025.0                         1.31               1347.0\n",
-       "2       이문동      1344.0                         1.77               2373.0\n",
-       "3       장안동      2745.0                         1.31               3584.0\n",
-       "4       전농동      1559.0                         1.26               1960.0\n",
-       "5       제기동       901.0                         1.33               1194.0\n",
-       "6       회기동       285.0                         1.18                335.0\n",
-       "7       휘경동      1130.0                         1.25               1413.0\n",
-       "8      답십리동      1873.0                         1.36               2538.0\n",
-       "9      청량리동       659.0                         1.32                873.0\n",
-       "10      NaN         NaN                          NaN                  NaN"
+       "      Gu  Dong  Pet_Owners  Total_Registrations\n",
+       "0   동대문구   신설동       147.0                194.0\n",
+       "1   동대문구   용두동      1025.0               1347.0\n",
+       "2   동대문구   이문동      1344.0               2373.0\n",
+       "3   동대문구   장안동      2745.0               3584.0\n",
+       "4   동대문구   전농동      1559.0               1960.0\n",
+       "5   동대문구   제기동       901.0               1194.0\n",
+       "6   동대문구   회기동       285.0                335.0\n",
+       "7   동대문구   휘경동      1130.0               1413.0\n",
+       "8   동대문구  답십리동      1873.0               2538.0\n",
+       "9   동대문구  청량리동       659.0                873.0\n",
+       "10  동대문구   NaN         NaN                  NaN"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 필요한 컬럼만 남기기\n",
-    "dongdaemun = dongdaemun[['읍면동(법정동)','동물소유자수','동물소유자당동물등록수','총등록수']]\n",
+    "dongdaemun = dongdaemun[['구','읍면동(법정동)','동물소유자수','총등록수']]\n",
     "\n",
     "# 컬럼명 변경하기\n",
-    "dongdaemun.rename(columns={'읍면동(법정동)':'Location',\n",
+    "dongdaemun.rename(columns={'구':'Gu',\n",
+    "                            '읍면동(법정동)':'Dong',\n",
     "                            '동물소유자수':'Pet_Owners',\n",
-    "                            '동물소유자당동물등록수':'Registrations_per_Pet_Owner',\n",
     "                            '총등록수':'Total_Registrations'},\n",
     "                  inplace=True)\n",
     "\n",
@@ -328,9 +491,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\82108\\AppData\\Local\\Temp\\ipykernel_26784\\2760320794.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dongdaemun.dropna(inplace=True)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -352,81 +526,81 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Location</th>\n",
+       "      <th>Gu</th>\n",
+       "      <th>Dong</th>\n",
        "      <th>Pet_Owners</th>\n",
-       "      <th>Registrations_per_Pet_Owner</th>\n",
        "      <th>Total_Registrations</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>동대문구</td>\n",
        "      <td>신설동</td>\n",
        "      <td>147.0</td>\n",
-       "      <td>1.32</td>\n",
        "      <td>194.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>동대문구</td>\n",
        "      <td>용두동</td>\n",
        "      <td>1025.0</td>\n",
-       "      <td>1.31</td>\n",
        "      <td>1347.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>동대문구</td>\n",
        "      <td>이문동</td>\n",
        "      <td>1344.0</td>\n",
-       "      <td>1.77</td>\n",
        "      <td>2373.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>동대문구</td>\n",
        "      <td>장안동</td>\n",
        "      <td>2745.0</td>\n",
-       "      <td>1.31</td>\n",
        "      <td>3584.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>동대문구</td>\n",
        "      <td>전농동</td>\n",
        "      <td>1559.0</td>\n",
-       "      <td>1.26</td>\n",
        "      <td>1960.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>동대문구</td>\n",
        "      <td>제기동</td>\n",
        "      <td>901.0</td>\n",
-       "      <td>1.33</td>\n",
        "      <td>1194.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>동대문구</td>\n",
        "      <td>회기동</td>\n",
        "      <td>285.0</td>\n",
-       "      <td>1.18</td>\n",
        "      <td>335.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
+       "      <td>동대문구</td>\n",
        "      <td>휘경동</td>\n",
        "      <td>1130.0</td>\n",
-       "      <td>1.25</td>\n",
        "      <td>1413.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
+       "      <td>동대문구</td>\n",
        "      <td>답십리동</td>\n",
        "      <td>1873.0</td>\n",
-       "      <td>1.36</td>\n",
        "      <td>2538.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
+       "      <td>동대문구</td>\n",
        "      <td>청량리동</td>\n",
        "      <td>659.0</td>\n",
-       "      <td>1.32</td>\n",
        "      <td>873.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -434,20 +608,20 @@
        "</div>"
       ],
       "text/plain": [
-       "  Location  Pet_Owners  Registrations_per_Pet_Owner  Total_Registrations\n",
-       "0      신설동       147.0                         1.32                194.0\n",
-       "1      용두동      1025.0                         1.31               1347.0\n",
-       "2      이문동      1344.0                         1.77               2373.0\n",
-       "3      장안동      2745.0                         1.31               3584.0\n",
-       "4      전농동      1559.0                         1.26               1960.0\n",
-       "5      제기동       901.0                         1.33               1194.0\n",
-       "6      회기동       285.0                         1.18                335.0\n",
-       "7      휘경동      1130.0                         1.25               1413.0\n",
-       "8     답십리동      1873.0                         1.36               2538.0\n",
-       "9     청량리동       659.0                         1.32                873.0"
+       "     Gu  Dong  Pet_Owners  Total_Registrations\n",
+       "0  동대문구   신설동       147.0                194.0\n",
+       "1  동대문구   용두동      1025.0               1347.0\n",
+       "2  동대문구   이문동      1344.0               2373.0\n",
+       "3  동대문구   장안동      2745.0               3584.0\n",
+       "4  동대문구   전농동      1559.0               1960.0\n",
+       "5  동대문구   제기동       901.0               1194.0\n",
+       "6  동대문구   회기동       285.0                335.0\n",
+       "7  동대문구   휘경동      1130.0               1413.0\n",
+       "8  동대문구  답십리동      1873.0               2538.0\n",
+       "9  동대문구  청량리동       659.0                873.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,12 +634,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 파일 저장하기\n",
-    "dongdaemun.to_csv(\"./dongdaemun.csv\")"
+    "dongdaemun.to_csv(\"./dongdaemun_지우_v1.csv\")"
    ]
   },
   {
