--- a/전처리 과정/반려동물등록현황/서초구_반려동물등록현황.ipynb
+++ b/전처리 과정/반려동물등록현황/서초구_반려동물등록현황.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,11 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = \"C:/Users/82108/Desktop/jw/프로젝트/반려동물등록현황전처리전/서울특별시_서초구_동물등록 현황_20230630.csv\"\n",
+    "file_path = \"C:/Users/82108/Desktop/jw/프로젝트/반려동물등록현황전처리전/서울_반려동물_등록현황/서울특별시_서초구_동물등록 현황_20230630.csv\"\n",
     "df_raw = pd.read_csv(file_path, encoding='euc-kr')\n",
     "# 파일불러오기 \n",
     "# 인코딩 문제 발생, 현재 파일이 EUC-KR로 인코딩되어 있으므로 encoding='euc-kr'으로 지정"
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "4  신원동            154            151   24     39     244  2023-06-30"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -174,8 +174,7 @@
        "      <th>등록품종수</th>\n",
        "      <th>동물소유자수</th>\n",
        "      <th>데이터기준일</th>\n",
-       "      <th>반려동물총계</th>\n",
-       "      <th>동물소유자당동물등록수</th>\n",
+       "      <th>구</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -188,8 +187,7 @@
        "      <td>48</td>\n",
        "      <td>308</td>\n",
        "      <td>2023-06-30</td>\n",
-       "      <td>439</td>\n",
-       "      <td>1.43</td>\n",
+       "      <td>서초구</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -200,8 +198,7 @@
        "      <td>85</td>\n",
        "      <td>4034</td>\n",
        "      <td>2023-06-30</td>\n",
-       "      <td>5203</td>\n",
-       "      <td>1.29</td>\n",
+       "      <td>서초구</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -212,8 +209,7 @@
        "      <td>90</td>\n",
        "      <td>5111</td>\n",
        "      <td>2023-06-30</td>\n",
-       "      <td>6428</td>\n",
-       "      <td>1.26</td>\n",
+       "      <td>서초구</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -224,8 +220,7 @@
        "      <td>94</td>\n",
        "      <td>4760</td>\n",
        "      <td>2023-06-30</td>\n",
-       "      <td>6250</td>\n",
-       "      <td>1.31</td>\n",
+       "      <td>서초구</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -236,30 +231,150 @@
        "      <td>39</td>\n",
        "      <td>244</td>\n",
        "      <td>2023-06-30</td>\n",
-       "      <td>329</td>\n",
-       "      <td>1.35</td>\n",
+       "      <td>서초구</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   법정동  내장형무선인식(RFID)  외장형무선인식(RFID)  인식표  등록품종수  동물소유자수      데이터기준일  반려동물총계  \\\n",
-       "0  내곡동            198            199   42     48     308  2023-06-30     439   \n",
-       "1  반포동           2595           2176  432     85    4034  2023-06-30    5203   \n",
-       "2  방배동           3426           2443  559     90    5111  2023-06-30    6428   \n",
-       "3  서초동           3173           2611  466     94    4760  2023-06-30    6250   \n",
-       "4  신원동            154            151   24     39     244  2023-06-30     329   \n",
-       "\n",
-       "   동물소유자당동물등록수  \n",
-       "0         1.43  \n",
-       "1         1.29  \n",
-       "2         1.26  \n",
-       "3         1.31  \n",
-       "4         1.35  "
+       "   법정동  내장형무선인식(RFID)  외장형무선인식(RFID)  인식표  등록품종수  동물소유자수      데이터기준일    구\n",
+       "0  내곡동            198            199   42     48     308  2023-06-30  서초구\n",
+       "1  반포동           2595           2176  432     85    4034  2023-06-30  서초구\n",
+       "2  방배동           3426           2443  559     90    5111  2023-06-30  서초구\n",
+       "3  서초동           3173           2611  466     94    4760  2023-06-30  서초구\n",
+       "4  신원동            154            151   24     39     244  2023-06-30  서초구"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seocho['구']=\"서초구\"\n",
+    "seocho.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>법정동</th>\n",
+       "      <th>내장형무선인식(RFID)</th>\n",
+       "      <th>외장형무선인식(RFID)</th>\n",
+       "      <th>인식표</th>\n",
+       "      <th>등록품종수</th>\n",
+       "      <th>동물소유자수</th>\n",
+       "      <th>데이터기준일</th>\n",
+       "      <th>구</th>\n",
+       "      <th>반려동물총계</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>내곡동</td>\n",
+       "      <td>198</td>\n",
+       "      <td>199</td>\n",
+       "      <td>42</td>\n",
+       "      <td>48</td>\n",
+       "      <td>308</td>\n",
+       "      <td>2023-06-30</td>\n",
+       "      <td>서초구</td>\n",
+       "      <td>439</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>반포동</td>\n",
+       "      <td>2595</td>\n",
+       "      <td>2176</td>\n",
+       "      <td>432</td>\n",
+       "      <td>85</td>\n",
+       "      <td>4034</td>\n",
+       "      <td>2023-06-30</td>\n",
+       "      <td>서초구</td>\n",
+       "      <td>5203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>방배동</td>\n",
+       "      <td>3426</td>\n",
+       "      <td>2443</td>\n",
+       "      <td>559</td>\n",
+       "      <td>90</td>\n",
+       "      <td>5111</td>\n",
+       "      <td>2023-06-30</td>\n",
+       "      <td>서초구</td>\n",
+       "      <td>6428</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>서초동</td>\n",
+       "      <td>3173</td>\n",
+       "      <td>2611</td>\n",
+       "      <td>466</td>\n",
+       "      <td>94</td>\n",
+       "      <td>4760</td>\n",
+       "      <td>2023-06-30</td>\n",
+       "      <td>서초구</td>\n",
+       "      <td>6250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>신원동</td>\n",
+       "      <td>154</td>\n",
+       "      <td>151</td>\n",
+       "      <td>24</td>\n",
+       "      <td>39</td>\n",
+       "      <td>244</td>\n",
+       "      <td>2023-06-30</td>\n",
+       "      <td>서초구</td>\n",
+       "      <td>329</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   법정동  내장형무선인식(RFID)  외장형무선인식(RFID)  인식표  등록품종수  동물소유자수      데이터기준일    구  \\\n",
+       "0  내곡동            198            199   42     48     308  2023-06-30  서초구   \n",
+       "1  반포동           2595           2176  432     85    4034  2023-06-30  서초구   \n",
+       "2  방배동           3426           2443  559     90    5111  2023-06-30  서초구   \n",
+       "3  서초동           3173           2611  466     94    4760  2023-06-30  서초구   \n",
+       "4  신원동            154            151   24     39     244  2023-06-30  서초구   \n",
+       "\n",
+       "   반려동물총계  \n",
+       "0     439  \n",
+       "1    5203  \n",
+       "2    6428  \n",
+       "3    6250  \n",
+       "4     329  "
+      ]
+     },
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,15 +383,12 @@
     "# 반려동물총계 컬럼 만들기\n",
     "seocho['반려동물총계'] = seocho['내장형무선인식(RFID)'] + seocho['외장형무선인식(RFID)'] + seocho['인식표']\n",
     "\n",
-    "# 반려동물소유자당동물등록수 컬럼 만들기\n",
-    "seocho['동물소유자당동물등록수'] = round(seocho['반려동물총계'] / seocho['동물소유자수'],2)\n",
-    "\n",
     "seocho.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -300,81 +412,81 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Location</th>\n",
+       "      <th>Gu</th>\n",
+       "      <th>Dong</th>\n",
        "      <th>Pet_Owners</th>\n",
-       "      <th>Registrations_per_Pet_Owner</th>\n",
        "      <th>Total_Registrations</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>서초구</td>\n",
        "      <td>내곡동</td>\n",
        "      <td>308</td>\n",
-       "      <td>1.43</td>\n",
        "      <td>439</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>서초구</td>\n",
        "      <td>반포동</td>\n",
        "      <td>4034</td>\n",
-       "      <td>1.29</td>\n",
        "      <td>5203</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>서초구</td>\n",
        "      <td>방배동</td>\n",
        "      <td>5111</td>\n",
-       "      <td>1.26</td>\n",
        "      <td>6428</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>서초구</td>\n",
        "      <td>서초동</td>\n",
        "      <td>4760</td>\n",
-       "      <td>1.31</td>\n",
        "      <td>6250</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>서초구</td>\n",
        "      <td>신원동</td>\n",
        "      <td>244</td>\n",
-       "      <td>1.35</td>\n",
        "      <td>329</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>서초구</td>\n",
        "      <td>양재동</td>\n",
        "      <td>1717</td>\n",
-       "      <td>1.32</td>\n",
        "      <td>2263</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>서초구</td>\n",
        "      <td>염곡동</td>\n",
        "      <td>54</td>\n",
-       "      <td>1.54</td>\n",
        "      <td>83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
+       "      <td>서초구</td>\n",
        "      <td>우면동</td>\n",
        "      <td>1106</td>\n",
-       "      <td>1.32</td>\n",
        "      <td>1460</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
+       "      <td>서초구</td>\n",
        "      <td>원지동</td>\n",
        "      <td>12</td>\n",
-       "      <td>1.33</td>\n",
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
+       "      <td>서초구</td>\n",
        "      <td>잠원동</td>\n",
        "      <td>2518</td>\n",
-       "      <td>1.26</td>\n",
        "      <td>3166</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -382,33 +494,33 @@
        "</div>"
       ],
       "text/plain": [
-       "  Location  Pet_Owners  Registrations_per_Pet_Owner  Total_Registrations\n",
-       "0      내곡동         308                         1.43                  439\n",
-       "1      반포동        4034                         1.29                 5203\n",
-       "2      방배동        5111                         1.26                 6428\n",
-       "3      서초동        4760                         1.31                 6250\n",
-       "4      신원동         244                         1.35                  329\n",
-       "5      양재동        1717                         1.32                 2263\n",
-       "6      염곡동          54                         1.54                   83\n",
-       "7      우면동        1106                         1.32                 1460\n",
-       "8      원지동          12                         1.33                   16\n",
-       "9      잠원동        2518                         1.26                 3166"
+       "    Gu Dong  Pet_Owners  Total_Registrations\n",
+       "0  서초구  내곡동         308                  439\n",
+       "1  서초구  반포동        4034                 5203\n",
+       "2  서초구  방배동        5111                 6428\n",
+       "3  서초구  서초동        4760                 6250\n",
+       "4  서초구  신원동         244                  329\n",
+       "5  서초구  양재동        1717                 2263\n",
+       "6  서초구  염곡동          54                   83\n",
+       "7  서초구  우면동        1106                 1460\n",
+       "8  서초구  원지동          12                   16\n",
+       "9  서초구  잠원동        2518                 3166"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 필요한 컬럼만 남기기\n",
-    "seocho = seocho[['법정동','동물소유자수','동물소유자당동물등록수','반려동물총계']]\n",
+    "seocho = seocho[['구','법정동','동물소유자수','반려동물총계']]\n",
     "\n",
     "# 컬럼명 변경하기\n",
-    "seocho.rename(columns={'법정동':'Location',\n",
-    "                            '동물소유자수':'Pet_Owners',\n",
-    "                            '동물소유자당동물등록수':'Registrations_per_Pet_Owner',\n",
-    "                            '반려동물총계':'Total_Registrations'},\n",
+    "seocho.rename(columns={'구':'Gu',\n",
+    "                        '법정동':'Dong',\n",
+    "                        '동물소유자수':'Pet_Owners',\n",
+    "                        '반려동물총계':'Total_Registrations'},\n",
     "                  inplace=True)\n",
     "\n",
     "seocho"
@@ -416,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -440,81 +552,81 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Location</th>\n",
+       "      <th>Gu</th>\n",
+       "      <th>Dong</th>\n",
        "      <th>Pet_Owners</th>\n",
-       "      <th>Registrations_per_Pet_Owner</th>\n",
        "      <th>Total_Registrations</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>서초구</td>\n",
        "      <td>내곡동</td>\n",
        "      <td>308</td>\n",
-       "      <td>1.43</td>\n",
        "      <td>439</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>서초구</td>\n",
        "      <td>반포동</td>\n",
        "      <td>4034</td>\n",
-       "      <td>1.29</td>\n",
        "      <td>5203</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>서초구</td>\n",
        "      <td>방배동</td>\n",
        "      <td>5111</td>\n",
-       "      <td>1.26</td>\n",
        "      <td>6428</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>서초구</td>\n",
        "      <td>서초동</td>\n",
        "      <td>4760</td>\n",
-       "      <td>1.31</td>\n",
        "      <td>6250</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>서초구</td>\n",
        "      <td>신원동</td>\n",
        "      <td>244</td>\n",
-       "      <td>1.35</td>\n",
        "      <td>329</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>서초구</td>\n",
        "      <td>양재동</td>\n",
        "      <td>1717</td>\n",
-       "      <td>1.32</td>\n",
        "      <td>2263</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>서초구</td>\n",
        "      <td>염곡동</td>\n",
        "      <td>54</td>\n",
-       "      <td>1.54</td>\n",
        "      <td>83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
+       "      <td>서초구</td>\n",
        "      <td>우면동</td>\n",
        "      <td>1106</td>\n",
-       "      <td>1.32</td>\n",
        "      <td>1460</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
+       "      <td>서초구</td>\n",
        "      <td>원지동</td>\n",
        "      <td>12</td>\n",
-       "      <td>1.33</td>\n",
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
+       "      <td>서초구</td>\n",
        "      <td>잠원동</td>\n",
        "      <td>2518</td>\n",
-       "      <td>1.26</td>\n",
        "      <td>3166</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -522,20 +634,20 @@
        "</div>"
       ],
       "text/plain": [
-       "  Location  Pet_Owners  Registrations_per_Pet_Owner  Total_Registrations\n",
-       "0      내곡동         308                         1.43                  439\n",
-       "1      반포동        4034                         1.29                 5203\n",
-       "2      방배동        5111                         1.26                 6428\n",
-       "3      서초동        4760                         1.31                 6250\n",
-       "4      신원동         244                         1.35                  329\n",
-       "5      양재동        1717                         1.32                 2263\n",
-       "6      염곡동          54                         1.54                   83\n",
-       "7      우면동        1106                         1.32                 1460\n",
-       "8      원지동          12                         1.33                   16\n",
-       "9      잠원동        2518                         1.26                 3166"
+       "    Gu Dong  Pet_Owners  Total_Registrations\n",
+       "0  서초구  내곡동         308                  439\n",
+       "1  서초구  반포동        4034                 5203\n",
+       "2  서초구  방배동        5111                 6428\n",
+       "3  서초구  서초동        4760                 6250\n",
+       "4  서초구  신원동         244                  329\n",
+       "5  서초구  양재동        1717                 2263\n",
+       "6  서초구  염곡동          54                   83\n",
+       "7  서초구  우면동        1106                 1460\n",
+       "8  서초구  원지동          12                   16\n",
+       "9  서초구  잠원동        2518                 3166"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,12 +660,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 파일 저장하기\n",
-    "seocho.to_csv(\"./seocho.csv\")"
+    "seocho.to_csv(\"./seocho_지우_v1.csv\")"
    ]
   },
   {
