--- a/전처리 과정/반려동물등록현황/동작구_반려동물등록현황.ipynb
+++ b/전처리 과정/반려동물등록현황/동작구_반려동물등록현황.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,11 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = \"C:/Users/82108/Desktop/jw/프로젝트/반려동물등록현황전처리전/서울특별시_동작구_반려동물등록현황_20230825.csv\"\n",
+    "file_path = \"C:/Users/82108/Desktop/jw/프로젝트/반려동물등록현황전처리전/서울_반려동물_등록현황/서울특별시_동작구_반려동물등록현황_20230825.csv\"\n",
     "df_raw = pd.read_csv(file_path, encoding='euc-kr')\n",
     "# 파일불러오기 \n",
     "# 인코딩 문제 발생, 현재 파일이 EUC-KR로 인코딩되어 있으므로 encoding='euc-kr'으로 지정"
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "4  서울특별시 동작구  상도동  2903  2623  593    6119     97    4738         1.29"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -179,74 +179,212 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Location</th>\n",
+       "      <th>시군구</th>\n",
+       "      <th>법정동</th>\n",
+       "      <th>내장형</th>\n",
+       "      <th>외장형</th>\n",
+       "      <th>인식표</th>\n",
+       "      <th>반려동물총계</th>\n",
+       "      <th>등록품종수</th>\n",
+       "      <th>동물소유자수</th>\n",
+       "      <th>동물소유자당동물등록수</th>\n",
+       "      <th>구</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>서울특별시 동작구</td>\n",
+       "      <td>본동</td>\n",
+       "      <td>278</td>\n",
+       "      <td>240</td>\n",
+       "      <td>67</td>\n",
+       "      <td>585</td>\n",
+       "      <td>55</td>\n",
+       "      <td>462</td>\n",
+       "      <td>1.27</td>\n",
+       "      <td>동작구</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>서울특별시 동작구</td>\n",
+       "      <td>대방동</td>\n",
+       "      <td>825</td>\n",
+       "      <td>930</td>\n",
+       "      <td>224</td>\n",
+       "      <td>1979</td>\n",
+       "      <td>73</td>\n",
+       "      <td>1579</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>동작구</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>서울특별시 동작구</td>\n",
+       "      <td>동작동</td>\n",
+       "      <td>171</td>\n",
+       "      <td>148</td>\n",
+       "      <td>23</td>\n",
+       "      <td>342</td>\n",
+       "      <td>42</td>\n",
+       "      <td>283</td>\n",
+       "      <td>1.21</td>\n",
+       "      <td>동작구</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>서울특별시 동작구</td>\n",
+       "      <td>사당동</td>\n",
+       "      <td>2336</td>\n",
+       "      <td>2345</td>\n",
+       "      <td>445</td>\n",
+       "      <td>5126</td>\n",
+       "      <td>101</td>\n",
+       "      <td>3871</td>\n",
+       "      <td>1.32</td>\n",
+       "      <td>동작구</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>서울특별시 동작구</td>\n",
+       "      <td>상도동</td>\n",
+       "      <td>2903</td>\n",
+       "      <td>2623</td>\n",
+       "      <td>593</td>\n",
+       "      <td>6119</td>\n",
+       "      <td>97</td>\n",
+       "      <td>4738</td>\n",
+       "      <td>1.29</td>\n",
+       "      <td>동작구</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         시군구  법정동   내장형   외장형  인식표  반려동물총계  등록품종수  동물소유자수  동물소유자당동물등록수    구\n",
+       "0  서울특별시 동작구   본동   278   240   67     585     55     462         1.27  동작구\n",
+       "1  서울특별시 동작구  대방동   825   930  224    1979     73    1579         1.25  동작구\n",
+       "2  서울특별시 동작구  동작동   171   148   23     342     42     283         1.21  동작구\n",
+       "3  서울특별시 동작구  사당동  2336  2345  445    5126    101    3871         1.32  동작구\n",
+       "4  서울특별시 동작구  상도동  2903  2623  593    6119     97    4738         1.29  동작구"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dongjak['구']=\"동작구\"\n",
+    "dongjak.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\82108\\AppData\\Local\\Temp\\ipykernel_2872\\1314179154.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dongjak.rename(columns={'구':'Gu',\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gu</th>\n",
+       "      <th>Dong</th>\n",
        "      <th>Pet_Owners</th>\n",
-       "      <th>Registrations_per_Pet_Owner</th>\n",
        "      <th>Total_Registrations</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>동작구</td>\n",
        "      <td>본동</td>\n",
        "      <td>462</td>\n",
-       "      <td>1.27</td>\n",
        "      <td>585</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>동작구</td>\n",
        "      <td>대방동</td>\n",
        "      <td>1579</td>\n",
-       "      <td>1.25</td>\n",
        "      <td>1979</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>동작구</td>\n",
        "      <td>동작동</td>\n",
        "      <td>283</td>\n",
-       "      <td>1.21</td>\n",
        "      <td>342</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>동작구</td>\n",
        "      <td>사당동</td>\n",
        "      <td>3871</td>\n",
-       "      <td>1.32</td>\n",
        "      <td>5126</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>동작구</td>\n",
        "      <td>상도동</td>\n",
        "      <td>4738</td>\n",
-       "      <td>1.29</td>\n",
        "      <td>6119</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>동작구</td>\n",
        "      <td>흑석동</td>\n",
        "      <td>1340</td>\n",
-       "      <td>1.27</td>\n",
        "      <td>1702</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>동작구</td>\n",
        "      <td>상도1동</td>\n",
        "      <td>382</td>\n",
-       "      <td>1.30</td>\n",
        "      <td>495</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
+       "      <td>동작구</td>\n",
        "      <td>노량진동</td>\n",
        "      <td>1158</td>\n",
-       "      <td>1.30</td>\n",
        "      <td>1509</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
+       "      <td>동작구</td>\n",
        "      <td>신대방동</td>\n",
        "      <td>1888</td>\n",
-       "      <td>1.29</td>\n",
        "      <td>2438</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -254,31 +392,31 @@
        "</div>"
       ],
       "text/plain": [
-       "  Location  Pet_Owners  Registrations_per_Pet_Owner  Total_Registrations\n",
-       "0       본동         462                         1.27                  585\n",
-       "1      대방동        1579                         1.25                 1979\n",
-       "2      동작동         283                         1.21                  342\n",
-       "3      사당동        3871                         1.32                 5126\n",
-       "4      상도동        4738                         1.29                 6119\n",
-       "5      흑석동        1340                         1.27                 1702\n",
-       "6     상도1동         382                         1.30                  495\n",
-       "7     노량진동        1158                         1.30                 1509\n",
-       "8     신대방동        1888                         1.29                 2438"
+       "    Gu  Dong  Pet_Owners  Total_Registrations\n",
+       "0  동작구    본동         462                  585\n",
+       "1  동작구   대방동        1579                 1979\n",
+       "2  동작구   동작동         283                  342\n",
+       "3  동작구   사당동        3871                 5126\n",
+       "4  동작구   상도동        4738                 6119\n",
+       "5  동작구   흑석동        1340                 1702\n",
+       "6  동작구  상도1동         382                  495\n",
+       "7  동작구  노량진동        1158                 1509\n",
+       "8  동작구  신대방동        1888                 2438"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 필요한 컬럼만 남기기\n",
-    "dongjak = dongjak[['법정동','동물소유자수','동물소유자당동물등록수','반려동물총계']]\n",
+    "dongjak = dongjak[['구','법정동','동물소유자수','반려동물총계']]\n",
     "\n",
     "# 컬럼명 변경하기\n",
-    "dongjak.rename(columns={'법정동':'Location',\n",
+    "dongjak.rename(columns={'구':'Gu',\n",
+    "                            '법정동':'Dong',\n",
     "                            '동물소유자수':'Pet_Owners',\n",
-    "                            '동물소유자당동물등록수':'Registrations_per_Pet_Owner',\n",
     "                            '반려동물총계':'Total_Registrations'},\n",
     "                  inplace=True)\n",
     "\n",
@@ -287,9 +425,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\82108\\AppData\\Local\\Temp\\ipykernel_2872\\2428412660.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dongjak.dropna(inplace=True)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -311,74 +460,74 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Location</th>\n",
+       "      <th>Gu</th>\n",
+       "      <th>Dong</th>\n",
        "      <th>Pet_Owners</th>\n",
-       "      <th>Registrations_per_Pet_Owner</th>\n",
        "      <th>Total_Registrations</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>동작구</td>\n",
        "      <td>본동</td>\n",
        "      <td>462</td>\n",
-       "      <td>1.27</td>\n",
        "      <td>585</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>동작구</td>\n",
        "      <td>대방동</td>\n",
        "      <td>1579</td>\n",
-       "      <td>1.25</td>\n",
        "      <td>1979</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>동작구</td>\n",
        "      <td>동작동</td>\n",
        "      <td>283</td>\n",
-       "      <td>1.21</td>\n",
        "      <td>342</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>동작구</td>\n",
        "      <td>사당동</td>\n",
        "      <td>3871</td>\n",
-       "      <td>1.32</td>\n",
        "      <td>5126</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>동작구</td>\n",
        "      <td>상도동</td>\n",
        "      <td>4738</td>\n",
-       "      <td>1.29</td>\n",
        "      <td>6119</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>동작구</td>\n",
        "      <td>흑석동</td>\n",
        "      <td>1340</td>\n",
-       "      <td>1.27</td>\n",
        "      <td>1702</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>동작구</td>\n",
        "      <td>상도1동</td>\n",
        "      <td>382</td>\n",
-       "      <td>1.30</td>\n",
        "      <td>495</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
+       "      <td>동작구</td>\n",
        "      <td>노량진동</td>\n",
        "      <td>1158</td>\n",
-       "      <td>1.30</td>\n",
        "      <td>1509</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
+       "      <td>동작구</td>\n",
        "      <td>신대방동</td>\n",
        "      <td>1888</td>\n",
-       "      <td>1.29</td>\n",
        "      <td>2438</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -386,19 +535,19 @@
        "</div>"
       ],
       "text/plain": [
-       "  Location  Pet_Owners  Registrations_per_Pet_Owner  Total_Registrations\n",
-       "0       본동         462                         1.27                  585\n",
-       "1      대방동        1579                         1.25                 1979\n",
-       "2      동작동         283                         1.21                  342\n",
-       "3      사당동        3871                         1.32                 5126\n",
-       "4      상도동        4738                         1.29                 6119\n",
-       "5      흑석동        1340                         1.27                 1702\n",
-       "6     상도1동         382                         1.30                  495\n",
-       "7     노량진동        1158                         1.30                 1509\n",
-       "8     신대방동        1888                         1.29                 2438"
+       "    Gu  Dong  Pet_Owners  Total_Registrations\n",
+       "0  동작구    본동         462                  585\n",
+       "1  동작구   대방동        1579                 1979\n",
+       "2  동작구   동작동         283                  342\n",
+       "3  동작구   사당동        3871                 5126\n",
+       "4  동작구   상도동        4738                 6119\n",
+       "5  동작구   흑석동        1340                 1702\n",
+       "6  동작구  상도1동         382                  495\n",
+       "7  동작구  노량진동        1158                 1509\n",
+       "8  동작구  신대방동        1888                 2438"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,12 +560,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 파일 저장하기\n",
-    "dongjak.to_csv(\"./ddongjak.csv\")"
+    "dongjak.to_csv(\"./dongjak_지우_v1.csv\")"
    ]
   },
   {
